--- a/rsvp.html
+++ b/rsvp.html
@@ -9,22 +9,12 @@
 <script type="text/javascript" src="lightbox.js"></script>
 </head>  
 <body>
-<header class="container">
-  <div class="row">
-    <h1 class="col-sm-4"><a class="btn btn-tertiary" href="index.html" role="button">Purcell Family Reunion</a></h1>
-    <nav class="col-sm-8 text-right">
-      <a class="btn btn-primary" href="construct.html" role="button">Directions</a><!--directions.html-->
-      <a class="btn btn-primary" href="rsvp.html" role="button">RSVP</a><!--rsvp.html-->
-      <a class="btn btn-primary" href="construct.html" role="button">Attractions</a><!--attractions.html-->
-      <a class="btn btn-primary" href="construct.html" role="button">Contact</a><!--Contact.html-->
-    </nav>
-  </div>
-</header>
 <section class="jumbotron">
 	<div class="container">
     <div class="row text-center">
         <figure class="col-sm-6">
-          <h2>Family Reunion 2016</h2>
+          <h2>Purcell Family Reunion 2017</h2>
+          <h2>July 20 - 24</h2>
         </figure>
         <figure class="col-sm-6">
           <a href="http://i1250.photobucket.com/albums/hh526/Joe_Purcell/12987219_10153596920552379_3201152241859787679_n_zpsfk531hzt.jpg" rel="lightbox" title="Family 20XX"><img src="http://i1250.photobucket.com/albums/hh526/Joe_Purcell/12987219_10153596920552379_3201152241859787679_n_zpsfk531hzt.jpg"></a>
@@ -32,6 +22,17 @@
     </div>
   </div>
 </section>
+<header class="container">
+  <div class="row">
+    <nav class="col-sm-8 text-right">
+      <a class="btn btn-primary" href="index.html" role="button"><h4>Home</h4></a><!--directions.html-->
+      <a class="btn btn-primary" href="directions.html" role="button"><h4>Directions</h4></a><!--directions.html-->
+      <a class="btn btn-primary" href="rsvp.html" role="button"><h4>RSVP</h4></a><!--rsvp.html-->
+      <a class="btn btn-primary" href="construct.html" role="button"><h4>Attractions</h4></a><!--attractions.html-->
+      <a class="btn btn-primary" href="contact.html" role="button"><h4>Contact</h4></a><!--Contact.html-->
+    </nav>
+  </div>
+</header>
 <section class="container">
  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIKxC9GtkzNDIYiaf-eMR1eLPqeVtMi7r2X-IA3LfgGOHR3w/viewform?embedded=true" width="760" height="1350" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </section>
