--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 </header>
 <section class="container">
-  <!--Save the Date::Make Lightbox'ed::--><img src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/13006741_10153597057187379_1112534388709672109_n.jpg?oh=77ec456054fe1d80512809a7045c13f4&oe=5834E13F">
+  <!--Save the Date::Make Lightbox'ed::--><img src="13006741_10153597057187379_1112534388709672109_n.png">
 </section>    
 <footer class="container">
 	<div class="row">
