--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h2>July 20 - 24</h2>
         </figure>
         <figure class="col-sm-6">
-          <a href="http://i1250.photobucket.com/albums/hh526/Joe_Purcell/12987219_10153596920552379_3201152241859787679_n_zpsfk531hzt.jpg" rel="lightbox" title="Family 20XX"><img src="http://i1250.photobucket.com/albums/hh526/Joe_Purcell/12987219_10153596920552379_3201152241859787679_n_zpsfk531hzt.jpg"></a>
+          <a href="12987219_10153596920552379_3201152241859787679_n.tif" rel="lightbox" title="Family 20XX"><img src="12987219_10153596920552379_3201152241859787679_n.tif"></a>
         </figure>
     </div>
   </div>
