--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
   </div>
 </header>
 <section class="container">
-  <!--Save the Date::Make Lightbox'ed::--><img src="13006741_10153597057187379_1112534388709672109_n.png">
+  <!--Save the Date::Make Lightbox'ed::-->
+  <div class="span4"></div>
+  <div class="span4"><img class="center-block" src="13006741_10153597057187379_1112534388709672109_n.png"></div>
+  <div class="span4"></div>
 </section>    
 <footer class="container">
 	<div class="row">
