--- a/rsvp.html
+++ b/rsvp.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Family Reunion 2016</title>
+  <title>Family Reunion 2017</title>
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" />
 <script type="text/javascript" src="lightbox.js"></script>
 </head>  
-<body>
 <section class="jumbotron">
 	<div class="container">
     <div class="row text-center">
@@ -34,7 +33,9 @@
   </div>
 </header>
 <section class="container">
- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIKxC9GtkzNDIYiaf-eMR1eLPqeVtMi7r2X-IA3LfgGOHR3w/viewform?embedded=true" width="760" height="1350" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+  <div class="span4"></div>
+  <div class="span4"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIKxC9GtkzNDIYiaf-eMR1eLPqeVtMi7r2X-IA3LfgGOHR3w/viewform?embedded=true" width="760" height="1350" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></div>
+  <div class="span4"></div>
 </section>
 <footer class="container">
 	<div class="row">
