--- a/rsvp.html
+++ b/rsvp.html
@@ -23,7 +23,8 @@
 </section>
 <header class="container">
   <div class="row">
-    <nav class="col-sm-8 text-right">
+    <!--<nav class="col-sm-6"></nav>-->
+    <nav class="col-sm-4 col-sm-offset-6 text-right">
       <a class="btn btn-primary" href="index.html" role="button"><h4>Home</h4></a><!--directions.html-->
       <a class="btn btn-primary" href="directions.html" role="button"><h4>Directions</h4></a><!--directions.html-->
       <a class="btn btn-primary" href="rsvp.html" role="button"><h4>RSVP</h4></a><!--rsvp.html-->
@@ -33,9 +34,9 @@
   </div>
 </header>
 <section class="container">
-  <div class="span4"></div>
-  <div class="span4"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIKxC9GtkzNDIYiaf-eMR1eLPqeVtMi7r2X-IA3LfgGOHR3w/viewform?embedded=true" width="760" height="1350" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></div>
-  <div class="span4"></div>
+  <div class="row">
+    <div class="col-sm-4 col-sm-offset-2"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIKxC9GtkzNDIYiaf-eMR1eLPqeVtMi7r2X-IA3LfgGOHR3w/viewform?embedded=true" width="760" height="1350" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></div>
+  </div>
 </section>
 <footer class="container">
 	<div class="row">
