--- a/rsvp.html
+++ b/rsvp.html
@@ -24,7 +24,7 @@
 <header class="container">
   <div class="row">
     <!--<nav class="col-sm-6"></nav>-->
-    <nav class="col-sm-4 col-md-offset-2 text-center">
+    <nav class="col-sm-6 col-sm-offset-2 text-center">
       <a class="btn btn-primary" href="index.html" role="button"><h4> Home </h4></a><!--directions.html-->
       <a class="btn btn-primary" href="directions.html" role="button"><h4> Directions </h4></a><!--directions.html-->
       <a class="btn btn-primary" href="rsvp.html" role="button"><h4> RSVP </h4></a><!--rsvp.html-->
