--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 </section>
 <header class="container">
   <div class="row">
-    <nav class="col-sm-8 text-right">
-      <a class="btn btn-primary" href="index.html" role="button"><h4>Home</h4></a><!--directions.html-->
-      <a class="btn btn-primary" href="directions.html" role="button"><h4>Directions</h4></a><!--directions.html-->
-      <a class="btn btn-primary" href="rsvp.html" role="button"><h4>RSVP</h4></a><!--rsvp.html-->
-      <a class="btn btn-primary" href="construct.html" role="button"><h4>Attractions</h4></a><!--attractions.html-->
-      <a class="btn btn-primary" href="contact.html" role="button"><h4>Contact</h4></a><!--Contact.html-->
+    <nav class="col-sm-5 col-sm-offset-3 text-right">
+      <a class="btn btn-primary" href="index.html" role="button"><h4> Home </h4></a><!--directions.html-->
+      <a class="btn btn-primary" href="directions.html" role="button"><h4> Directions </h4></a><!--directions.html-->
+      <a class="btn btn-primary" href="rsvp.html" role="button"><h4> RSVP </h4></a><!--rsvp.html-->
+      <a class="btn btn-primary" href="construct.html" role="button"><h4> Attractions </h4></a><!--attractions.html-->
+      <a class="btn btn-primary" href="contact.html" role="button"><h4> Contact </h4></a><!--Contact.html-->
     </nav>
   </div>
 </header>
