--- a/rsvp.html
+++ b/rsvp.html
@@ -25,7 +25,8 @@
   <div class="row">
     <!--<nav class="col-sm-6"></nav>-->
     <nav class="col-sm-5 col-sm-offset-3 text-right">
-      <a class="btn btn-primary" href="index.html" role="button"><h4> Home </h4></a><!--directions.html-->
+      <a class="btn btn-primary" href="index.html" role="button"><h4> Home </h4></a><!--index.html-->
+      <a class="btn btn-primary" href="hotel.html" role="button"><h4> Hotel </h4></a><!--hotel.html-->
       <a class="btn btn-primary" href="directions.html" role="button"><h4> Directions </h4></a><!--directions.html-->
       <a class="btn btn-primary" href="rsvp.html" role="button"><h4> RSVP </h4></a><!--rsvp.html-->
       <a class="btn btn-primary" href="construct.html" role="button"><h4> Attractions </h4></a><!--attractions.html-->
