--- a/construct.html
+++ b/construct.html
@@ -17,19 +17,20 @@
           <h2>July 20 - 24</h2>
         </figure>
         <figure class="col-sm-6">
-          <a href="http://i1250.photobucket.com/albums/hh526/Joe_Purcell/12987219_10153596920552379_3201152241859787679_n_zpsfk531hzt.jpg" rel="lightbox" title="Family 20XX"><img src="http://i1250.photobucket.com/albums/hh526/Joe_Purcell/12987219_10153596920552379_3201152241859787679_n_zpsfk531hzt.jpg"></a>
+          <img src="12987219_10153596920552379_3201152241859787679_n.png">
         </figure>
     </div>
   </div>
 </section>
 <header class="container">
   <div class="row">
-    <nav class="col-sm-8 text-right">
-      <a class="btn btn-primary" href="index.html" role="button"><h4>Home</h4></a><!--directions.html-->
-      <a class="btn btn-primary" href="directions.html" role="button"><h4>Directions</h4></a><!--directions.html-->
-      <a class="btn btn-primary" href="rsvp.html" role="button"><h4>RSVP</h4></a><!--rsvp.html-->
-      <a class="btn btn-primary" href="construct.html" role="button"><h4>Attractions</h4></a><!--attractions.html-->
-      <a class="btn btn-primary" href="contact.html" role="button"><h4>Contact</h4></a><!--Contact.html-->
+    <nav class="col-sm-6 col-sm-offset-3 text-right">
+      <a class="btn btn-primary" href="index.html" role="button"><h4> Home </h4></a><!--index.html-->
+      <a class="btn btn-primary" href="hotel.html" role="button"><h4> Hotel </h4></a><!--hotel.html-->
+      <a class="btn btn-primary" href="directions.html" role="button"><h4> Directions </h4></a><!--directions.html-->
+      <a class="btn btn-primary" href="rsvp.html" role="button"><h4> RSVP </h4></a><!--rsvp.html-->
+      <a class="btn btn-primary" href="construct.html" role="button"><h4> Attractions </h4></a><!--attractions.html-->
+      <a class="btn btn-primary" href="contact.html" role="button"><h4> Contact </h4></a><!--Contact.html-->
     </nav>
   </div>
 </header>
