--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
   <div class="col-sm-6">
     <h3>Phone #: 717-858-4613</h3>
       <h3>Email: tjpjr9@hotmail.com</h3>
-    <h3>Facebook:<a class="btn btn-quinary" href="https://www.facebook.com/ChiefTim?fref=ts"   role="button">Facebook</h3></a>
+    <h3>Facebook:<a class="btn btn-quinary" target="_blank" href="https://www.facebook.com/ChiefTim?fref=ts"   role="button">Facebook</h3></a>
      <h3>Address: 1010 Grim Hollow Road, Red Lion PA, 17356</h3>
   </div>
   <div class="col-sm-6">
