--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,8 @@
     <h3>Phone #: 717-858-4613</h3>
       <h3>Email: tjpjr9@hotmail.com</h3>
     <h3>Facebook:<a class="btn btn-quinary" target="_blank" href="https://www.facebook.com/ChiefTim?fref=ts"   role="button">Facebook</h3></a>
-     <h3>Address: 1010 Grim Hollow Road, Red Lion PA, 17356</h3>
+    <h3>Facebook Event Page: <a class="btn btn-quinary" target="_blank" href="https://www.facebook.com/events/151520625247225/" role="button">Event Page</h3></a></h3>
+    <h3>Address: 1010 Grim Hollow Road, Red Lion PA, 17356</h3>
   </div>
   <div class="col-sm-6">
     <img src="13177794_10153545464954212_1167552668472816247_n.jpg">
@@ -52,9 +53,6 @@
 <footer class="container">
   <div class="row">
     <p class="col-sm-4">&copy; 2016 Mad March Hare Designs</p>
-    <ul class="col-sm-8">
-      <li class="col-sm-2"><a class="btn btn-quad" href="https://www.facebook.com/events/151520625247225/" role="button">Facebook<img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg"></a></li>
-    </ul>
   </div>
 </footer>
 </body>
