--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <section class="container">
   <!--Save the Date::Make Lightbox'ed::-->
   <div class="span4"></div>
-  <div class="span4"><img class="center-block" src="13006741_10153597057187379_1112534388709672109_n.png"></div>
+  <div class="span4"><img class="center-block" src="13006741_10153597057187379_1112534388709672109_n.png" rel="lightbox"></div>
   <div class="span4"></div>
 </section>    
 <footer class="container">
