--- a/hotel.html
+++ b/hotel.html
@@ -54,7 +54,7 @@
           <h4>Spin2 Cycle Center—Laundry and Fitness Facility</h4>
         </div>
         <div class="col-sm-6">
-          <br>
+          <h4><b>Home2 by Hilton</b>(<a href="directions.html">Directions</a>)</h4>
           <br>
           <h4>*Brand New Rooms:</h4> 
           <h4>15 DoubleQueens w/ Sofa Beds</h4>
