--- a/directions.html
+++ b/directions.html
@@ -39,20 +39,27 @@
     <figure class="col-sm-6">
       <h1>Purcell Home</h1>
       <p>*There will be a map with Purcell Home linked here*</p>
-      <!--<script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:275px;width:555px;'><div id='gmap_canvas' style='height:275px;width:555px;'></div><div><small><a href="http://embedgooglemaps.com">									embed google maps							</a></small></div><div><small><a href="https://privacypolicytemplate.net">privacy policy example</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(39.8859458155742,-76.5968649656067),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(39.8859458155742,-76.5968649656067)});infowindow = new google.maps.InfoWindow({content:'<strong>Purcell House</strong><br>1010 Grim Hollow Road<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>-->
     </figure>
     <figure class="col-sm-6">
       <h1>Hotel</h1>
       <p>*There will be a map with the hotel linked here*</p>
-      <!--<script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:275px;width:555px;'><div id='gmap_canvas' style='height:275px;width:555px;'></div><div><small><a href="http://embedgooglemaps.com">									embed google maps							</a></small></div><div><small><a href="https://privacypolicytemplate.net">privacy policy example</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(39.9319261,-76.68403999999998),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(39.9319261,-76.68403999999998)});infowindow = new google.maps.InfoWindow({content:'<strong>Home2 Suites by Hilton</strong><br>212 Pauline Dr, York, PA 17402<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>-->
     </figure>
   </div>
+  <!--<div class="row">
+      <figure class="col-sm-6">
+      <h1>From Purcell House to Hotel</h1>
+      </figure>
+      <figure class="col-sm-6">
+      <h1>From Hotel to Purcell House</h1>
+      </figure>
+  </div>-->
+  <div class="pagebreak"></div>
   <div class="row">
     <figure class="col-sm-6">
       <h1>From Purcell House to Hotel</h1>
       <h3>Directions:</h3>
       <h4>Take a left out of the driveway going toward Felton Rd/PA-24/S. Main Street. Stay on 24 for 1.2 miles. Turn Left onto W. Broadway/PA-74. Follow the road for 6 miles. Turn Right onto Pauline Drive. Destination will be on you left.</h4>
-      <h2>_____________________________________________________________________</h2>
+      <h2>_________________________________________</h2>
       <br>
       <h4>1010 Grim Hollow Road
         Red Lion, PA 17356  (Purcell House)</h4>
@@ -80,7 +87,7 @@
       <h1>From Hotel to Purcell House</h1>
       <h3>Directions:</h3>
       <h4>Take a left onto S. Queen Steet/PA-74. Follow the road for 6 miles. Turn right onto S. Main Street/PA-24. Follow the road for 1.2 miles. (S.Main Street curves you will continue going strait. Grim Hollow Will then be on your right) Turn right onto Grim Hollow Road. Destination will be on you right.</h4>
-      <br>
+      <h2>_________________________________________</h2>
       <br>
       <h4>Home2 Suites by Hilton York
       212 Pauline Drive, York, PA 17402 (Hotel)</h4>
