--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h2>July 20 - 24</h2>
         </figure>
         <figure class="col-sm-6">
-          <img src="12987219_10153596920552379_3201152241859787679_n.png">
+            <a href="12987219_10153596920552379_3201152241859787679_n.png" rel="lightbox"><img src="12987219_10153596920552379_3201152241859787679_n.png"></a>
         </figure>
     </div>
   </div>
