--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,8 @@
 <section class="container">
   <div class="col-sm-6">
     <h3>Phone #: 717-858-4613</h3>
-      <h3>Email: tjpjr9@hotmail.com</h3>
+    <h3>Email: tjpjr9@hotmail.com</h3>
+    <h5>*You need to be logged into facebook to view these two links</h5>
     <h3>Facebook:<a class="btn btn-quinary" target="_blank" href="https://www.facebook.com/ChiefTim?fref=ts"   role="button">Facebook</h3></a>
     <h3>Facebook Event Page: <a class="btn btn-quinary" target="_blank" href="https://www.facebook.com/events/151520625247225/" role="button">Event Page</h3></a></h3>
     <h3>Address: 1010 Grim Hollow Road, Red Lion PA, 17356</h3>
