--- a/hotel.html
+++ b/hotel.html
@@ -63,7 +63,7 @@
           <br>
           <font size="+1"> *To reserve these rooms you can do it online at the website below, or do it by calling the hotel number provided.*</font>
           <h4>Booking:<a link href="http://home2suites3.hilton.com/en/hotels/pennsylvania/home2-suites-by-hilton-york-THVYOHT/index.html" type="_blank">Link</a></h4>
-          <h4>Hotel Phone Number: 1-717-747-0360</h4>
+          <h4>Hotel Phone Number: 1 (717)747-0360</h4>
         </div>
     </div>
 </section> 
