--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>  
 <body>
 <section class="jumbotron">
-  <div class="container">
+	<div class="container">
     <div class="row text-center">
         <figure class="col-sm-6">
           <h2>Purcell Family Reunion 2017</h2>
           <h2>July 20 - 24</h2>
         </figure>
         <figure class="col-sm-6">
-            <a href="12987219_10153596920552379_3201152241859787679_n.png" rel="lightbox"><img src="12987219_10153596920552379_3201152241859787679_n.png"></a>
+          <img src="12987219_10153596920552379_3201152241859787679_n.png">
         </figure>
     </div>
   </div>
@@ -35,33 +35,13 @@
   </div>
 </header>
 <section class="container">
-  <div class="panel panel-default">
-      <div class="panel-heading"><h3>February 2017 Update #1</h3></div>
-      <div class="panel-body">
-      <h4>Hello all,</h4>
-          <h4>I wanted to pass along to you as promised so of the schedule and the updates. The update to start is about the hotel. From Thursday - Saturday we only have 8 rooms left. If you have not booked a room please do so now. Of those 8 rooms we only have one more king bedroom. If you want a king bedroom and they say they have no more left please go through me.</h4>
-          <h4>Schedule for the reunion will go as follows: </h4>
-          <h4><b>Thursday:</b> Welcome Day - Chill hang out and explore. Bonfire and meet & greet at Tim and Julie Sr's house in Red Lion, PA<br>
-              <b>Friday:</b> Golf Outing? in the AM, Then Scheduled Events from mid-morning until ? (Its a surprise ya'll)<br>  
-              <b>Saturday:</b> BBQ, Swiming, More Scheduled Events from mid-morning until ?<br>
-              <b>Sunday:</b> Goodbye, Travel Day, Adventure Day, Continue the Party.</h4>
-          <h4>Next month is the "deadline" to RSVP for the Reunion. I need to know who is coming by March 1st. If you have not RSVP'ed yet please do so on the tab above. </h4>
-          <h4>Thanks all and look for an update the 1st week of March</h4>
-          <h4>TJ </h4>
-      </div>
-  </div>
-</section>
-<br>
-<br>
-<section class="container">
   <!--Save the Date::Make Lightbox'ed::-->
   <div class="span4"></div>
-  <!--<a href="#" rel="lightbox" ><img src="#" /></a>-->
-  <div class="span4"><a href="13006741_10153597057187379_1112534388709672109_n.png" rel="lightbox"><img class="center-block" src="13006741_10153597057187379_1112534388709672109_n.png"></a></div>
+  <div class="span4"><a href="13006741_10153597057187379_1112534388709672109_n.png" rel="lightbox"><img class="center-block" src="/Pictures/13006741_10153597057187379_1112534388709672109_n.png"></a></div>
   <div class="span4"></div>
 </section>    
 <footer class="container">
-  <div class="row">
+	<div class="row">
     <p class="col-sm-4">&copy; 2016 Mad March Hare Designs</p>
   </div>
 </footer>
