--- a/hotel.html
+++ b/hotel.html
@@ -63,10 +63,31 @@
           <br>
           <font size="+1"> *To reserve these rooms you can do it online at the website below, or do it by calling the hotel number provided.*</font>
           <h4>Booking:<a link href="http://home2suites3.hilton.com/en/hotels/pennsylvania/home2-suites-by-hilton-york-THVYOHT/index.html" type="_blank">Link</a></h4>
-          <h4>Hotel Phone Number: 1 (717)747-0360</h4>
+          <h4>Hotel Phone Number: 1-717-747-0360</h4>
         </div>
     </div>
-</section> 
+</section>
+<br>
+<section class="container">
+    <hr>
+</section>
+<br>
+<section class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <h4>Queen Room</h4>
+            <img src="queen1.JPG">
+        </div>
+        <div class="col-sm-6">
+            <h4>King Room</h4>
+            <img src="king1.JPG">
+        </div>
+    </div>
+    <div class="row">
+        <img src="sofa.JPG">
+        <img src="kitchen.JPG">
+    </div>
+</section>
 <footer class="container">
   <div class="row">
     <p class="col-sm-4">&copy; 2016 Mad March Hare Designs</p>
