--- a/index.html
+++ b/index.html
@@ -24,21 +24,26 @@
 </section>
 <header class="container">
   <div class="row">
-    <nav class="col-sm-6 col-sm-offset-3 text-right">
+    <nav class="col-sm-6 col-sm-offset-4 text-right">
       <a class="btn btn-primary" href="index.html" role="button"><h4> Home </h4></a><!--index.html-->
       <a class="btn btn-primary" href="hotel.html" role="button"><h4> Hotel </h4></a><!--hotel.html-->
       <a class="btn btn-primary" href="directions.html" role="button"><h4> Directions </h4></a><!--directions.html-->
       <a class="btn btn-primary" href="rsvp.html" role="button"><h4> RSVP </h4></a><!--rsvp.html-->
-      <a class="btn btn-primary" href="construct.html" role="button"><h4> Attractions </h4></a><!--attractions.html-->
+      <a class="btn btn-primary" href="construct.html" role="button"><h4> Golf Outing </h4></a><!--golf.html-->
+      <a class="btn btn-primary" href="construct.html" role="button"><h4> T-Shirts </h4></a><!--tshirt.html-->
+      <a class="btn btn-primary" href="schedule.html" role="button"><h4> Schedule </h4></a><!--schedule.html-->
       <a class="btn btn-primary" href="contact.html" role="button"><h4> Contact </h4></a><!--Contact.html-->
     </nav>
   </div>
 </header>
 <section class="container">
-  <!--Save the Date::Make Lightbox'ed::-->
-  <div class="span4"></div>
-  <div class="span4"><a href="13006741_10153597057187379_1112534388709672109_n.png" rel="lightbox"><img class="center-block" src="13006741_10153597057187379_1112534388709672109_n.png"></a></div>
-  <div class="span4"></div>
+    <!--<div class="row">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-6"><a href="/Pictures/13006741_10153597057187379_1112534388709672109_n.png" rel="lightbox"><img class="center-block" src="/Pictures/13006741_10153597057187379_1112534388709672109_n.png"></a></div>
+    </div>-->
+    <div class="row">
+        <div class="col-sm-12"><iframe src='https://onedrive.live.com/embed?cid=3874354926B17013&resid=3874354926B17013%21541&authkey=ABnQ4KRKNPHDKtI&em=2&wdStartOn=1' width='1225px' height='1100px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> document, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe></div>
+    </div>
 </section>    
 <footer class="container">
 	<div class="row">
