--- a/rsvp.html
+++ b/rsvp.html
@@ -23,12 +23,14 @@
 </section>
 <header class="container">
   <div class="row">
-    <nav class="col-sm-6 col-sm-offset-3 text-right">
+    <nav class="col-sm-6 col-sm-offset-4 text-right">
       <a class="btn btn-primary" href="index.html" role="button"><h4> Home </h4></a><!--index.html-->
       <a class="btn btn-primary" href="hotel.html" role="button"><h4> Hotel </h4></a><!--hotel.html-->
       <a class="btn btn-primary" href="directions.html" role="button"><h4> Directions </h4></a><!--directions.html-->
       <a class="btn btn-primary" href="rsvp.html" role="button"><h4> RSVP </h4></a><!--rsvp.html-->
-      <a class="btn btn-primary" href="construct.html" role="button"><h4> Attractions </h4></a><!--attractions.html-->
+      <a class="btn btn-primary" href="construct.html" role="button"><h4> Golf Outing </h4></a><!--golf.html-->
+      <a class="btn btn-primary" href="construct.html" role="button"><h4> T-Shirts </h4></a><!--tshirt.html-->
+      <a class="btn btn-primary" href="schedule.html" role="button"><h4> Schedule </h4></a><!--schedule.html-->
       <a class="btn btn-primary" href="contact.html" role="button"><h4> Contact </h4></a><!--Contact.html-->
     </nav>
   </div>
