--- a/tshirt.html
+++ b/tshirt.html
@@ -3,14 +3,12 @@
   <title>Family Reunion 2017</title>
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" />
   <script type="text/javascript" src="lightbox.js"></script>
   <script src="https://www.w3schools.com/lib/w3data.js"></script>
-</head>  
+</head> 
 <body>
 <section class="jumbotron">
 	<div class="container">
@@ -27,13 +25,16 @@
 </section>
 <div w3-include-html="header.html"></div>
 <section class="container">
-    <div class="row">
-        <div class="col-sm-12"><iframe width="1225" height="1100" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?cid=3874354926B17013&resid=3874354926B17013%21537&authkey=AISMACBpdTEDiL8&em=2&wdAllowInteractivity=False&Item='DayBook'!B1%3AH23&wdHideGridlines=True&wdDownloadButton=True"></iframe></div>
-    </div>
-</section>    
+  <div class="row">
+    <div class="col-sm-4 col-sm-offset-2"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeXkHhDet6DrNCZL3jd5pJfnPE-wqn8bQhTzgrWyTC-RenSYg/viewform?embedded=true" width="760" height="1450" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></div>
+  </div>
+</section>
 <footer class="container">
 	<div class="row">
     <p class="col-sm-4">&copy; 2016 Mad March Hare Designs</p>
+    <ul class="col-sm-8">
+      <li class="col-sm-2"><a class="btn btn-quad" href="https://www.facebook.com/events/151520625247225/" role="button">Facebook<img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg"></a></li>
+    </ul>
   </div>
 </footer>
 </body>
