--- a/directions.html
+++ b/directions.html
@@ -6,7 +6,8 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" />
-<script type="text/javascript" src="lightbox.js"></script>
+  <script type="text/javascript" src="lightbox.js"></script>
+  <script src="https://www.w3schools.com/lib/w3data.js"></script>
 </head>  
 <body>
 <section class="jumbotron">
@@ -22,20 +23,7 @@
     </div>
   </div>
 </section>
-<header class="container">
-  <div class="row">
-    <nav class="col-sm-6 col-sm-offset-4 text-right">
-      <a class="btn btn-primary" href="index.html" role="button"><h4> Home </h4></a><!--index.html-->
-      <a class="btn btn-primary" href="hotel.html" role="button"><h4> Hotel </h4></a><!--hotel.html-->
-      <a class="btn btn-primary" href="directions.html" role="button"><h4> Directions </h4></a><!--directions.html-->
-      <a class="btn btn-primary" href="rsvp.html" role="button"><h4> RSVP </h4></a><!--rsvp.html-->
-      <a class="btn btn-primary" href="construct.html" role="button"><h4> Golf Outing </h4></a><!--golf.html-->
-      <a class="btn btn-primary" href="construct.html" role="button"><h4> T-Shirts </h4></a><!--tshirt.html-->
-      <a class="btn btn-primary" href="schedule.html" role="button"><h4> Schedule </h4></a><!--schedule.html-->
-      <a class="btn btn-primary" href="contact.html" role="button"><h4> Contact </h4></a><!--Contact.html-->
-    </nav>
-  </div>
-</header>
+<div w3-include-html="header.html"></div>
 <section class="container">
   <div class="row">
     <figure class="col-sm-6">
@@ -126,4 +114,7 @@
   </div>
 </footer>
 </body>
+    <script>
+    w3IncludeHTML();
+    </script>
 </html>
