--- a/rsvp.html
+++ b/rsvp.html
@@ -6,8 +6,10 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" />
-<script type="text/javascript" src="lightbox.js"></script>
-</head>  
+  <script type="text/javascript" src="lightbox.js"></script>
+  <script src="https://www.w3schools.com/lib/w3data.js"></script>
+</head>
+<body>
 <section class="jumbotron">
 	<div class="container">
     <div class="row text-center">
@@ -21,20 +23,7 @@
     </div>
   </div>
 </section>
-<header class="container">
-  <div class="row">
-    <nav class="col-sm-6 col-sm-offset-4 text-right">
-      <a class="btn btn-primary" href="index.html" role="button"><h4> Home </h4></a><!--index.html-->
-      <a class="btn btn-primary" href="hotel.html" role="button"><h4> Hotel </h4></a><!--hotel.html-->
-      <a class="btn btn-primary" href="directions.html" role="button"><h4> Directions </h4></a><!--directions.html-->
-      <a class="btn btn-primary" href="rsvp.html" role="button"><h4> RSVP </h4></a><!--rsvp.html-->
-      <a class="btn btn-primary" href="construct.html" role="button"><h4> Golf Outing </h4></a><!--golf.html-->
-      <a class="btn btn-primary" href="construct.html" role="button"><h4> T-Shirts </h4></a><!--tshirt.html-->
-      <a class="btn btn-primary" href="schedule.html" role="button"><h4> Schedule </h4></a><!--schedule.html-->
-      <a class="btn btn-primary" href="contact.html" role="button"><h4> Contact </h4></a><!--Contact.html-->
-    </nav>
-  </div>
-</header>
+<div w3-include-html="header.html"></div>
 <section class="container">
   <div class="row">
     <div class="col-sm-4 col-sm-offset-2"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIKxC9GtkzNDIYiaf-eMR1eLPqeVtMi7r2X-IA3LfgGOHR3w/viewform?embedded=true" width="760" height="1350" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></div>
@@ -49,4 +38,7 @@
   </div>
 </footer>
 </body>
+    <script>
+    w3IncludeHTML();
+    </script>
 </html>
