--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
         <div class="dropdown-content">
             <a href="rsvp.html">RSVP</a>
             <a href="tshirt.html">T-Shirt</a>
-            <a href="construct.html">Golf Outing</a>
+            <a href="golf.html">Golf Outing</a>
         </div>
       </div>
       <a class="btn btn-primary" href="schedule.html" role="button"><h4> Schedule </h4></a><!--schedule.html-->
